martian-derive/tests/ui_martian_struct/test_invalid_mro_type_val.stderr
error: "The usage of mro_type should be of form #[mro_type="type"] or #[mro_type="type[]"], where type can be one of: int, float, string, bool, map, path"
 --> tests/ui_martian_struct/test_invalid_mro_type_val.rs:8:5
  |
8 | /     #[mro_type=int] // Should be "int"
9 | |     foo: Foo,
  | |____________^

error: unexpected expression: `int`
 --> tests/ui_martian_struct/test_invalid_mro_type_val.rs:8:16
  |
8 |     #[mro_type=int] // Should be "int"
  |                ^^^
